# whichway

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
assets/: app.js  index.html  style.css
src/: cli.rs  exec.rs  lib.rs  main.rs  model.rs  server.rs
src/attribute/: atmos.rs  mod.rs  process.rs  tailscale.rs  zscaler.rs
src/collect/: dns.rs  interfaces.rs  lookup.rs  mod.rs  pf.rs  routes.rs  services.rs  sockets.rs  throughput.rs
tests/: json_schema.rs  parsers.rs
tests/fixtures/: ifconfig.txt  ifconfig_multivpn.txt  lsof.txt  netstat_inet.txt  netstat_inet6.txt  netstat_multivpn.txt  nettop.txt  pfctl_sa.txt  pfctl_sr.txt  route_get.txt  scutil_dns.txt  scutil_nc.txt  scutil_nwi.txt
